# ml-stock-prediction

./: .env-init  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  mlflow.db  params.yaml  project_structure.md  pyproject.toml  run_pipeline.py
.github/workflows/: daily_pipeline.yml  weekly_train.yml
backend/core/: config.py  schemas.py
backend/core/features/: indicators.py  manifest.py  preprocessing.py
backend/core/prediction/: base.py  mlflow_predict.py
backend/data/features/: sp500_features.parquet
backend/data/predictions/: sp500_predictions.parquet
backend/data/raw/: sp500_ohlcv.parquet
backend/infra/: dagshub_init.py
backend/infra/database/: __init__.py  base.py  duckdb_store.py
backend/infra/storage/: __init__.py  base.py  dagshub_storage.py
backend/ml/registry/: model_registry.py
backend/ml/training/: __init__.py  base.py  extra_tree.py  lightgbm_trainer.py
backend/ml/training/tuning/: optuna_tuner.py
backend/notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_prediction_analysis.ipynb  05_model_comparison.ipynb  06_feature_selection.ipynb
backend/workflows/: fetch_data.py  predict.py  train.py
docs/: actual_training_process.md  atr_signal.md  auto_trading_bot.md  chart_overlays.md  improvements.md  market_structure.md  project_structure.md  training_pipeline.md
frontend/: app.py  charts.py  data_loader.py  model_card.py
frontend/charts/: __init__.py  candlestick.py  performance.py  theme.py
tests/workflows/: test_train.py
