[tool.poetry]
name = "ml-stock-prediction"
version = "0.1.0"
description = "S&P 500 Stock Prediction with ML Pipeline"
authors = ["Erik Autenrieth"]
readme = "README.md"

packages = [
    { include = "backend" },
    { include = "frontend" },
]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "*"
dagshub = "*"
duckdb = "*"
dvc = { version = "*", extras = ["s3"] }
joblib = "*"
mlflow = "*"
numpy = "*"
optuna = "*"
optuna-integration = { version = "*", extras = ["mlflow"] }
pandas = "*"
pyarrow = "*"
pydantic = "*"
pydantic-settings = "*"
scikit-learn = "*"
seaborn = "^0.13.2"
structlog = "*"
ta = "*"
watchdog = "^6.0.0"
yfinance = "*"

[tool.poetry.group.frontend.dependencies]
plotly = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
